# perpetua

./: README.md  design.md  requirements.txt
localrag/: README.md  docs.md  pyproject.toml
localrag/src/localrag/: __main__.py  app.py  utils.py
localrag/src/localrag/agent/: agent.py
localrag/src/localrag/rag/: document_processing.py  rag.py
perpetua/: README.md  docs.md  pyproject.toml
perpetua/src/perpetua/: app.py  repo_graph.py  setup_db.py  utils.py
perpetua/src/perpetua/agent/: document_processing.py  prompts.py  tools.py
perpetua/tests/: README.md  conftest.py  test_cli.py
