[project]
name = "localrag"
version = "0.1"
description = ""
authors = [
    {name = "Sami Khayatei Houssaini",email = "sami_houssaini@berkeley.edu"}
]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "typer (>=0.20.0,<0.21.0)",
    "langgraph (>=1.0.4,<2.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "langchain (>=1.1.0,<2.0.0)",
    "langchain-google-genai (>=3.2.0,<4.0.0)",
    "langchain-text-splitters (>=1.0.0,<2.0.0)",
    "langchain-core (>=1.1.0,<2.0.0)",
    "langchain-milvus (>=0.3.0,<0.4.0)",
    "rich (>=14.2.0,<15.0.0)",
    "langchain-tavily (>=0.2.13,<0.3.0)"
]

[tool.poetry]
packages = [{include = "localrag", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
localrag = "localrag.app:app"